@@ -1,4 +1,5 @@
 0.2.3
+Fixed min/max window by 3rd party.
 Fixed resizing.
 Fixed fallback colours.
 Added -f,-b and -t options to set forecolour,backcolour and textcolour of window frame decorations.
